--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
